fix: swagger documentation
